# tomberek.github.io

./: .gitignore  .gitmodules  README.md  about.html  about.md  archive.html  atom.xml  blog.html  circle.yml  contact.html  contact.md  editor.html  github-markdown.css  index.html  index.md  keybase.txt  markdeep-editor.html  markdeep-viewer.html  markdeep.html  markdown.css  matrix.html  resume.css  resume.html  resume2.css  robots.txt  rss.xml  shell.nix  stack.yaml  tom-hakyll.cabal  user.settings
app/: Main.hs
categories/: RETE.html  posts.html
css/: aluod.css  base.css  bootstrap-blog.css  dbyll.css  festively.css  ghostwriter.css  github-markdown.css  jeen.css  lebo.css  markdown.css  resume.css  resume2.css  tacit.css  wardrobe.css
editr/: editr.css
editr/items/PROJECT-NAME/: resume.css  resume.html
js/: .themer.js.un~  themer.js
posts/: 2015-07-15-Initial-Post.html  2015-07-15-Initial-Post.md  2015-08-08-Initial-Post.html  2015-08-08-Initial-Post.md  2015-08-09-dotcom-monitor.html  2015-08-09-dotcom-monitor.md
posts/Nix/: 2018-03-27-Nix-on-Tinker-Board.md
posts/RETE/: 2016-04-10-RETE-Project.html  2016-04-10-RETE-Project.md
resume/: index.html
tags/: OPS5.html  RETE.html  devops.html  initial.html  rewriting.html  rules.html
templates/: archive.html  default.html  defaultWithStyling.html  post.html  tag.html
