name:               tom-hakyll
version:            0.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable tom-hakyll
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , hakyll >= 4.6 && < 5
                     , pandoc
  default-language:    Haskell2010
